docs-kits_versioned_docs/version-25.09/kits/supply-chain-disruption-notification-kit/changelog.md
---
id: changelog
title: Changelog
description: 'Supply Chain Disruption Notifications'
sidebar_position: 1
---

![Supply Chain Disruption Notifications kit banner](@site/static/img/kits/supply-chain-disruption-notification/supply-chain-disruption-notification-kit-logo.svg)

### Supply Chain Disruption Notifications

All notable changes to this Kit will be documented in this file.

## [2.0.0] - 2025-08-22

### Added

Software Development View:

- Restructured into subchapters architecutre, policies and demand and capacity notification
- Table for setting fields in `header`
- Versioning chapter

Adoption View:

- Fixed copy and paster error in `Figure 1` (and migrated file basis to draw.io)
- Reworked `Figure 2` to a forwarding example
- Provided example for the forwarding example

### Changed

Software Development View:

- Updated samples and references to updated standard and aspect model

Adoption View:

- Reworked `Figure 2` to a forwarding example

### Removed

- ./.

## [1.0.1] - 2024-11-18

### Added

- ./.

### Changed

- New kit-icon and gallery banner

### Removed

- ./.

## [1.0.0] - 2024-08-01

### Added

- Initial version of the Kit including adoption, development and operations view

### Changed

- ./.

### Removed

- ./.

## NOTICE

This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/legalcode).

- SPDX-License-Identifier: CC-BY-4.0
- SPDX-FileCopyrightText: 2024 ZF Friedrichshafen AG
- SPDX-FileCopyrightText: 2024 Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
- SPDX-FileCopyrightText: 2024 SAP SE
- SPDX-FileCopyrightText: 2024 Mercedes Benz Group AG
- SPDX-FileCopyrightText: 2024 BASF SE
- SPDX-FileCopyrightText: 2024 SupplyOn AG
- SPDX-FileCopyrightText: 2024 Henkel AG & Co.KGaA
- SPDX-FileCopyrightText: 2024 Contributors of the Eclipse Foundation
- SPDX-FileCopyrightText: 2024 ISTOS GmbH (a member of the DMG Mori Group)
- SPDX-FileCopyrightText: 2024 Fraunhofer-Gesellschaft zur Foerderung der angewandten Forschung e.V. (represented by Fraunhofer ISST)
- SPDX-FileCopyrightText: 2024 TRUMPF Werkzeugmaschinen SE + Co. KG
- SPDX-FileCopyrightText: 2024 Volkswagen AG
- SPDX-FileCopyrightText: 2025 WITTE Automotive GmbH
- SPDX-FileCopyrightText: 2025 Ford Werke GmbH
- SPDX-FileCopyrightText: 2025 Robert Bosch Manufacturing Solutions GmbH
- SPDX-FileCopyrightText: 2025 IBM Deutschland GmbH
- SPDX-FileCopyrightText: 2024 Contributors to the Eclipse Foundation
- Source URL: [https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs-kits_versioned_docs/version-25.09/kits/supply-chain-disruption-notification-kit/changelog.md](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/docs-kits_versioned_docs/version-25.09/kits/supply-chain-disruption-notification-kit/changelog.md)
